--- a/index.html
+++ b/index.html
@@ -4,16 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web developer portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    <header>
+<body class="open-sans-normal">
+    <header  class="header secondary-bg">
+        <nav> 
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class=".dark-2" href="">portfolio</a></li>
+                <li><a class=".dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
+            </ul>
+        
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+             <h4 class="banner-greetings dark-2">Hi, I am</h4>
+             <h1 class="banner-title">Mary hardy</h1>
+             <p class="benner-description">
+                Shot what able cold new see hold.Friendly as an betrayed 
+                formerly he.Morning because as to society behaved moments.
+             </p>
+             <button class="btn-primary">Download CV</button>
+             <button class="btn-primary">Contact</button>
+            </div>
+             <img class="banner-profile-pic" src="images/hardy.png"alt="">
 
+
+        </div>
     </header>
     <main>
+         <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+         <p class="section-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, doloremque in itaque ex suscipit molestiae exercitationem quos maiores sit praesentium velit cumque, magni saepe mollitia corporis libero, dolore adipisci hic!
 
+
+         </p>
+         <div class="about-items">
+            <div class="about-item">
+                <p class="item-title">name </p>
+                <p class="item-description">Mary hardy</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Email</p>
+                <p class="item-description">abc@def.com</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">Date of birth</p>
+                <p class="item-description">Dec 16 ,1971</p>
+            </div>
+            <div class="about-item">
+                <p class="item-title">from</p>
+                <p class="item-description">cumilla bd</p>
+            </div>
+         </div>
+         </section>
+         <!--What is do section start-->
+         <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium laborum doloribus inventore dolorem excepturi? Quidem amet neque voluptatum delectus facilis velit in rerum quam quo dolores. Molestias laudantium asperiores architecto.
+
+            </p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla javascript</h4>
+                    <p class="skill-description">list skill technologies here.
+                        you can change the icons above to any of the 1500+ fontawsome 5 free icons
+                        available. anenan connodo ligula eget dolor.
+
+                    </p>
+
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">list skill technologies here.
+                        you can change the icons above to any of the 1500+ fontawsome 5 free icons
+                        available. anenan connodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">list skill technologies here.
+                        you can change the icons above to any of the 1500+ fontawsome 5 free icons
+                        available. anenan connodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">list skill technologies here.
+                        you can change the icons above to any of the 1500+ fontawsome 5 free icons
+                        available. anenan connodo ligula eget dolor</p>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
